# uptime-kuma-mcp-server

./: .bumpversion.cfg  README.md  main.py  pyproject.toml  server.py
.github/workflows/: python.yml
src/uptime_kuma_mcp_server/: __main__.py  server.py
tests/: run_sse.py
